--- a/static_frontpage/index.html
+++ b/static_frontpage/index.html
@@ -36,7 +36,7 @@
 						  <span class="icon-bar"></span>
 						  <span class="icon-bar"></span>
 						</button>
-						<p>Meny</p>
+						<p class="navbar-title">Stockholm Flow</p>
 					  </div>
 					  <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 						<ul class="nav navbar-nav">
